# image-search

./: .gitignore  03-library.html  04-scan-report.html  08-pdf-files.html  09-tags.html  11-settings.html  12-changelog.html  AGENTS.md  CLAUDE.md  README.md  automation.config.json  eslint.config.mjs  index.html  mypy.ini  package-lock.json  package.json  pytest.ini  requirements.txt  vite.config.ts  vitest.config.ts  提示词.txt
.github/workflows/: ci.yml
backend/: main.py  requirements.txt
backend/data/: zoobet.db
backend/db/: connection.py  schema.sql
backend/scripts/: seed_test_data.py  verify_backend.py  verify_scan_flow.py
backend/services/: __init__.py  ai_service.py  db_service.py  error_report_service.py  excel_service.py  library_service.py  match_service.py  ocr_service.py  scan_service.py  search_service.py  settings_service.py  system_service.py  ug_service.py
css/: design-system.css
docs/: AI-CODING-RULES.md  CHANGELOG.md  DESIGN-PLAN.md  DEV-GUIDE.md  FEATURES.md  QUALITY-AUDIT.md  RELEASE-CHECKLIST.md  USER-GUIDE.md  final-verification.md  performance-report.md
release/: build-report.json  build-report.md
schemas/: automation.config.schema.json
scripts/: build-msi.ps1  build-release.mjs  check.mjs  claude-codex-loop.ps1  codex-review-check.ps1  generate-icons.mjs  setup-git-hooks.ps1  setup-git-hooks.sh  validate-configs.ps1
src/: App.tsx  AppShell.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: export.rs  lib.rs  main.rs
src/i18n/: context.tsx  (+2 more)
test-data/: readme.txt
(+225 files in other folders)
